--- a/src/views/main.html
+++ b/src/views/main.html
@@ -1,12 +1,12 @@
 <div class="panel panel-default">
   <div class="panel-body title-panel">
     How affordable is affordable
+    {{ main.showContent }}
   </div>
 </div>
 
 <div class="panel panel-default">
-  <div class="panel-body">
+  <div class="panel-body content-panel">
     Content
   </div>
 </div>
-
